FOF 3.6.3
================================================================================
# [LOW] DataController: successful copy message when no items were selected

FOF 3.6.2
================================================================================

# [HIGH] Joomla 4 changed the names of class constants without prior notice, causing a massive backwards compatibility break
~ FEF Renderer: do not load dark mode JavaScript (it's not used)

FOF 3.6.1
================================================================================

~ Dummy scaffolding options in the Factory to prevent upgrades from freaking out

FOF 3.6.0
================================================================================
+ Automatic template suffixes based on Joomla! version _and_ renderer used
+ Platform now has an isApi() method to detect the Joomla! 4 API application
+ Joomla 4 console application now treated the same way as a Joomla CLI application
- Removed obsolete CLI tool
- Removed deprecated Form package and Scaffolding feature
- Removed the LESS package
- Removed the HAL package and the ability of the JSON view to render HAL documents natively
- Removed mcrypt support
~ Drop support for PHP 5.6, 7.0
~ Drop support for PHP Joomla! 3.8
~ Renderer changes
# [LOW] Joomla 4 broke b/c with the Controller's setRedirect

FOF 3.5.4
================================================================================
+ Draggable reordering support in Joomla 4
+ Common Blade templates (backported from FOF 4)
~ Update the CLI application for Joomla 4 Beta 1
~ Apply Joomla version suffixes to all view templates, not just forms
# [HIGH] DateDecorator fails to call correctly certain DateTime methods, including getTimezone() and diff(), returning invalid results
# [HIGH] Input in Joomla 4 always returns stale data, ignoring changes made by routing
# [HIGH] Raw filtering in Input class broken in Joomla 4
# [MEDIUM] Publish / unpublish icon doesn't work under Joomla 4